--- a/WebContent/buyTicket.html
+++ b/WebContent/buyTicket.html
@@ -4,14 +4,13 @@
 <meta charset="UTF-8">
 <title>Kup bilet - MyTrain</title>
 
-</head>
-<body>
-<p id="session"></p>
-<p id="local"></p>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="js/buyTicketScript.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js">
-    $("#local").text(window.localStorage.getItem("localItem"));
-</script>
+</head>
+<body onload="getSearchResults()">
+
+tabela z wynikami.
 
 </body>
 </html>
