--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,15 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>MyTrain - połączenia kolejowe całej Polski</title>
-<style>
-
-</style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="js/indexScripts.js"></script>
 </head>
-<body>
-
-<form>
-<button formaction="search.html">Wyszukaj polaczenie</button>
-</form>
+<body onload="setSearchData()">
 
 </body>
 </html>
