--- a/WebContent/buyTicket.html
+++ b/WebContent/buyTicket.html
@@ -7,10 +7,52 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="js/buyTicketScript.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="css/buyTicket.css">
+    <link rel="stylesheet" type="text/css" href="css/defaults.css">
+
 </head>
 <body onload="getSearchResults()">
 
-tabela z wynikami.
+<div id="top">
+    <label id="logo">MyTrain</label>
+</div>
+
+<div id="content">
+    <table id="optionTable">
+        <tr>
+            <th></th>
+            <th>Typ pociągu</th>
+            <th>Odjazd</th>
+            <th>Przyjazd</th>
+            <th>Czas podróży</th>
+            <th></th>
+        </tr>
+        <tr>
+            <td><input class="optionCheck" type="checkbox"></td>
+            <td>TLK</td>
+            <td>10:20</td>
+            <td>15:35</td>
+            <td>5:15</td>
+            <td>TLK 28100 Gałczyński</td>
+        </tr>
+        <tr>
+            <td><input class="optionCheck" type="checkbox"></td>
+            <td>TLK</td>
+            <td>10:20</td>
+            <td>15:35</td>
+            <td>5:15</td>
+            <td>TLK 28100 Gałczyński</td>
+        </tr>
+        <tr>
+            <td><input class="optionCheck" type="checkbox"></td>
+            <td>TLK</td>
+            <td>10:20</td>
+            <td>15:35</td>
+            <td>5:15</td>
+            <td>TLK 28100 Gałczyński</td>
+        </tr>
+    </table>
+</div>
 
 </body>
 </html>
