Added clear table script, more changes

--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -24,8 +24,8 @@
 	<label class="labels">Składy</label>
 	<table>
 		<tr>
-			<td class="tableStatus" style="width: 200px">
-				<p id="trainsetStatus">Ilosc rekordow w tabeli</p>
+			<td class="tableStatus" style="width: 180px">
+				<p id="trainsetStatus"></p>
 			</td>
 			<td class="tableInput">
 				<input id="trainsetInput" type="file"><br>
@@ -35,10 +35,10 @@
 				<button class="optionButton">Edytuj tabele</button>
 			</td>
 			<td class="tableButton">
-				<button class="optionButton">Wyczysc tabele</button>
+				<button class="optionButton" onclick="clearTrainset()">Wyczysc tabele</button>
 			</td>
 			<td class="tableInfo" style="width: 400px">
-				<p id="trainsetP">BLAD: 400 - serwer nie odpowiadaaaaaaaaaaaaaaa</p>
+				<p id="trainsetP"></p>
 			</td>
 		</tr>
 	</table>
@@ -46,8 +46,8 @@
 	<label class="labels">Wagony</label>
 	<table>
 		<tr>
-			<td class="tableStatus">
-				<p id="carriageStatus">Ilosc rekordow w tabeli</p>
+			<td class="tableStatus" style="width: 180px">
+				<p id="carriageStatus"></p>
 			</td>
 			<td class="tableInput">
 				<input id="carriageInput" type="file"><br>
@@ -57,10 +57,10 @@
 				<button class="optionButton">Edytuj tabele</button>
 			</td>
 			<td class="tableButton">
-				<button class="optionButton">Wyczysc tabele</button>
+				<button class="optionButton" onclick="clearCarriage()">Wyczysc tabele</button>
 			</td>
-			<td class="tableInfo">
-				<p id="carriageP">info</p>
+			<td class="tableInfo" style="width: 400px">
+				<p id="carriageP"></p>
 			</td>
 		</tr>
 	</table>
@@ -68,8 +68,8 @@
 	<label class="labels">Stacje</label>
 	<table>
 		<tr>
-			<td class="tableStatus">
-				<p id="stationStatus">Ilosc rekordow w tabeli</p>
+			<td class="tableStatus" style="width: 180px">
+				<p id="stationStatus"></p>
 			</td>
 			<td class="tableInput">
 				<input id="stationInput" type="file"><br>
@@ -79,10 +79,10 @@
 				<button class="optionButton">Edytuj tabele</button>
 			</td>
 			<td class="tableButton">
-				<button class="optionButton">Wyczysc tabele</button>
+				<button class="optionButton" onclick="clearStation()">Wyczysc tabele</button>
 			</td>
-			<td class="tableInfo">
-				<p id="stationP">info</p>
+			<td class="tableInfo" style="width: 400px">
+				<p id="stationP"></p>
 			</td>
 		</tr>
 	</table>
@@ -90,8 +90,8 @@
 	<label class="labels">Kursy</label>
 	<table>
 		<tr>
-			<td class="tableStatus">
-				<p id="courseStatus">Ilosc rekordow w tabeli</p>
+			<td class="tableStatus" style="width: 180px">
+				<p id="courseStatus"></p>
 			</td>
 			<td class="tableInput">
 				<input id="courseInput" type="file"><br>
@@ -101,10 +101,10 @@
 				<button class="optionButton">Edytuj tabele</button>
 			</td>
 			<td class="tableButton">
-				<button class="optionButton">Wyczysc tabele</button>
+				<button class="optionButton" onclick="clearCourse()">Wyczysc tabele</button>
 			</td>
-			<td class="tableInfo">
-				<p id="courseP">info</p>
+			<td class="tableInfo" style="width: 400px">
+				<p id="courseP"></p>
 			</td>
 		</tr>
 	</table>
@@ -112,8 +112,8 @@
 	<label class="labels">Rozkład kursów</label>
 	<table>
 		<tr>
-			<td class="tableStatus">
-				<p id="routePointStatus">Ilosc rekordow w tabeli</p>
+			<td class="tableStatus" style="width: 180px">
+				<p id="routePointStatus"></p>
 			</td>
 			<td class="tableInput">
 				<input id="routePointInput" type="file"><br>
@@ -123,10 +123,10 @@
 				<button class="optionButton">Edytuj tabele</button>
 			</td>
 			<td class="tableButton">
-				<button class="optionButton">Wyczysc tabele</button>
+				<button class="optionButton" onclick="clearRoutePoint()">Wyczysc tabele</button>
 			</td>
-			<td class="tableInfo">
-				<p id="routePointP">info</p>
+			<td class="tableInfo" style="width: 400px">
+				<p id="routePointP"></p>
 			</td>
 		</tr>
 	</table>
