--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -4,12 +4,14 @@
 <meta charset="UTF-8">
 <title>Strona administratorska - MyTrain</title>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script src="http://malsup.github.io/jquery.blockUI.js"></script>
+	<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 	<script type="text/javascript" src="js/adminScript.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="css/admin.css">
 	<link rel="stylesheet" type="text/css" href="css/defaults.css">
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
 </head>
 
@@ -25,7 +27,7 @@
 	<table>
 		<tr>
 			<td class="tableStatus" style="width: 180px">
-				<p id="trainsetStatus"></p>
+				<p id="trainsetStatus">Empty</p>
 			</td>
 			<td class="tableInput">
 				<input id="trainsetInput" type="file"><br>
@@ -47,7 +49,7 @@
 	<table>
 		<tr>
 			<td class="tableStatus" style="width: 180px">
-				<p id="carriageStatus"></p>
+				<p id="carriageStatus">Empty</p>
 			</td>
 			<td class="tableInput">
 				<input id="carriageInput" type="file"><br>
@@ -69,7 +71,7 @@
 	<table>
 		<tr>
 			<td class="tableStatus" style="width: 180px">
-				<p id="stationStatus"></p>
+				<p id="stationStatus">Empty</p>
 			</td>
 			<td class="tableInput">
 				<input id="stationInput" type="file"><br>
@@ -91,7 +93,7 @@
 	<table>
 		<tr>
 			<td class="tableStatus" style="width: 180px">
-				<p id="courseStatus"></p>
+				<p id="courseStatus">Empty</p>
 			</td>
 			<td class="tableInput">
 				<input id="courseInput" type="file"><br>
@@ -113,7 +115,7 @@
 	<table>
 		<tr>
 			<td class="tableStatus" style="width: 180px">
-				<p id="routePointStatus"></p>
+				<p id="routePointStatus">Empty</p>
 			</td>
 			<td class="tableInput">
 				<input id="routePointInput" type="file"><br>
@@ -130,6 +132,10 @@
 			</td>
 		</tr>
 	</table>
+</div>
+
+<div id="clear_dialog" title="Czyszczenie tabeli">
+	<p id="dialog_message"></p>
 </div>
 
 </body>
