--- a/WebContent/buyTicket.html
+++ b/WebContent/buyTicket.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Kup bilet - MyTrain</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="js/buyTicketScript.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/buyTicket.css">
