--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>MyTrain - połączenia kolejowe całej Polski</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="js/indexScripts.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/index.css">
