fixed data transfer between index and buyTicket, started search page

--- a/WebContent/buyTicket.html
+++ b/WebContent/buyTicket.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/defaults.css">
 
 </head>
-<body onload="getSearchResults()">
+<body>
 
 <div id="top">
     <label id="logo">MyTrain</label>
