started table filling

--- a/WebContent/buyTicket.html
+++ b/WebContent/buyTicket.html
@@ -27,32 +27,33 @@
             <th>Czas podróży</th>
             <th></th>
         </tr>
-        <tr>
-            <td><input class="optionCheck" type="checkbox"></td>
-            <td>TLK</td>
-            <td>10:20</td>
-            <td>15:35</td>
-            <td>5:15</td>
-            <td>TLK 28100 Gałczyński</td>
-        </tr>
-        <tr>
-            <td><input class="optionCheck" type="checkbox"></td>
-            <td>TLK</td>
-            <td>10:20</td>
-            <td>15:35</td>
-            <td>5:15</td>
-            <td>TLK 28100 Gałczyński</td>
-        </tr>
-        <tr>
-            <td><input class="optionCheck" type="checkbox"></td>
-            <td>TLK</td>
-            <td>10:20</td>
-            <td>15:35</td>
-            <td>5:15</td>
-            <td>TLK 28100 Gałczyński</td>
-        </tr>
     </table>
 </div>
+
+<!--<tr>-->
+    <!--<td><input class="optionCheck" type="checkbox"></td>-->
+    <!--<td>TLK</td>-->
+    <!--<td>10:20</td>-->
+    <!--<td>15:35</td>-->
+    <!--<td>5:15</td>-->
+    <!--<td>TLK 28100 Gałczyński</td>-->
+<!--</tr>-->
+<!--<tr>-->
+    <!--<td><input class="optionCheck" type="checkbox"></td>-->
+    <!--<td>TLK</td>-->
+    <!--<td>10:20</td>-->
+    <!--<td>15:35</td>-->
+    <!--<td>5:15</td>-->
+    <!--<td>TLK 28100 Gałczyński</td>-->
+<!--</tr>-->
+<!--<tr>-->
+    <!--<td><input class="optionCheck" type="checkbox"></td>-->
+    <!--<td>TLK</td>-->
+    <!--<td>10:20</td>-->
+    <!--<td>15:35</td>-->
+    <!--<td>5:15</td>-->
+    <!--<td>TLK 28100 Gałczyński</td>-->
+<!--</tr>-->
 
 </body>
 </html>
