--- a/WebContent/buyTicket.html
+++ b/WebContent/buyTicket.html
@@ -21,11 +21,10 @@
     <table id="optionTable">
         <tr>
             <th></th>
-            <th>Typ pociągu</th>
-            <th>Odjazd</th>
-            <th>Przyjazd</th>
-            <th>Czas podróży</th>
-            <th></th>
+            <th style="width: 200px">Numer pociągu</th>
+            <th style="width: 100px">Odjazd</th>
+            <th style="width: 100px">Przyjazd</th>
+            <th style="width: 100px">Czas podróży</th>
         </tr>
     </table>
 </div>
